--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
+    "axios": "^0.27.2",
+    "child_process": "^1.0.2",
+    "fs": "^0.0.1-security",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.4"
