--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "electron-react-ts",
-  "productName": "Electron React TypeScript",
-  "description": "An Electron boilerplate with hot reloading for React and TypeScript.",
-  "version": "1.7.2",
+  "name": "minecraft-server-manager",
+  "productName": "MinecraftServerManager",
+  "description": "",
+  "version": "1",
   "license": "MIT",
   "main": "dist/main.js",
   "scripts": {
