--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev:tsc": "tsc -w -p tsconfig.main.json",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
     "dev:electron": "wait-on ./dist/index.html && cross-env NODE_ENV=\"development\" electron .",
-    "build": "cross-env NODE_ENV=\"production\" webpack --progress",
+    "build": "cross-env NODE_ENV=\"production\" webpack --progress && electron-forge make",
     "preview": "electron .",
     "start": "electron-forge start",
     "package": "electron-forge package",
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.64",
-    "@electron-forge/maker-deb": "^6.0.0-beta.64",
+    "@electron-forge/maker-dmg": "^6.0.0-beta.64",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.64",
     "@electron-forge/maker-zip": "^6.0.0-beta.64",
     "@types/node": "^18.0.0",
