--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.27.2",
     "child_process": "^1.0.2",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-window-state": "^5.0.3",
     "fs": "^0.0.1-security",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
