--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "jsx": "react-jsx",
     "strict": true
   },
+  "include": ["src"],
   "ts-node": {
     "compilerOptions": {
       "target": "ES2020",
