--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,6 +14,7 @@
 		{
 			"type": "npm",
 			"script": "build",
+			"group": "build",
 			"problemMatcher": [],
 			"label": "npm: build",
 			"detail": "Build electron app"
