--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "mini-css-extract-plugin": "^2.6.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "terser-webpack-plugin": "^5.3.3",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4",
@@ -60,7 +61,17 @@
     "forge": {
       "packagerConfig": {
         "dir": "./dist",
-        "ignore": [".minecraft", ".vscode", "node_modules", "src", ".gitignore", "package-lock.json", "tsconfig.json", "tsconfig.main.json", "webpack.config.ts"],
+        "ignore": [
+          ".minecraft",
+          ".vscode",
+          "node_modules",
+          "src",
+          ".gitignore",
+          "package-lock.json",
+          "tsconfig.json",
+          "tsconfig.main.json",
+          "webpack.config.ts"
+        ],
         "asar": true
       },
       "makers": [
