--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
+    "@types/axios": "^0.14.0",
     "axios": "^0.27.2",
     "child_process": "^1.0.2",
     "electron-squirrel-startup": "^1.0.0",
