--- a/package.json
+++ b/package.json
@@ -26,18 +26,16 @@
     "@types/axios": "^0.14.0",
     "axios": "^0.27.2",
     "child_process": "^1.0.2",
-    "electron-squirrel-startup": "^1.0.0",
     "electron-window-state": "^5.0.3",
     "fs": "^0.0.1-security",
     "fs-extra": "^10.1.0",
+    "got": "^12.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "recoil": "^0.7.4"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.64",
     "@electron-forge/maker-dmg": "^6.0.0-beta.64",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.64",
     "@electron-forge/maker-zip": "^6.0.0-beta.64",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^18.0.0",
