--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.90",
     "@mui/material": "^5.8.6",
     "@types/axios": "^0.14.0",
     "axios": "^0.27.2",
